feat: button consolidation

--- a/src/common/styles/globals.less
+++ b/src/common/styles/globals.less
@@ -1,6 +1,4 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import './globals.css';
 
 @import './ant-theme.less';
 @import './minter-theme-overrides.less';
