feat: ran prettier everywhere

--- a/src/assets/styles/globals.less
+++ b/src/assets/styles/globals.less
@@ -125,7 +125,7 @@ input[type='checkbox'] {
 
 .sol-input:before {
   content: '◎';
-  @apply h-full absolute px-4 flex items-center text-gray-500;
+  @apply absolute flex h-full items-center px-4 text-gray-500;
 }
 
 .select-inline-dropdown .ant-select-item {
@@ -153,7 +153,7 @@ input[type='checkbox'] {
   width: 100%;
 }
 
-.ant-image-mask  {
+.ant-image-mask {
   border-top-left-radius: 8px;
   border-top-right-radius: 8px;
   background: none;
@@ -196,13 +196,12 @@ input[type='checkbox'] {
   font-weight: bold;
 }
 
-
 .dt-bg-\[\#25BC3B\] {
   background-color: white !important;
 }
 
 .dt-relative.dt-flex.dt-items-center.dt-justify-center.dt-rounded-full {
- @apply !rounded-full !p-6 !shadow-lg !shadow-black !transition;
+  @apply !rounded-full !p-6 !shadow-lg !shadow-black !transition;
 }
 
 .dt-relative.dt-flex.dt-items-center.dt-justify-center.dt-rounded-full:hover {
